--- a/.env.example
+++ b/.env.example
@@ -62,3 +62,12 @@ APP_SHARED_SECRET=""
 # Telegram bot will send notifications to this chat
 TELEGRAM_BOT_TOKEN=""
 TELEGRAM_CHAT_ID=""
+
+SENTRY_DSN=
+SENTRY_LARAVEL_DSN=
+SENTRY_TRACES_SAMPLE_RATE=1.0
+
+AUTHENTIK_BASE_URL=
+AUTHENTIK_CLIENT_ID=
+AUTHENTIK_CLIENT_SECRET=
+AUTHENTIK_REDIRECT_URI=
