--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.4",
+        "dutchcodingcompany/filament-socialite": "^3.0",
         "filament/filament": "^4.0",
         "filament/spatie-laravel-settings-plugin": "^4.0",
         "guzzlehttp/guzzle": "^7.9",
@@ -20,9 +21,11 @@
         "laravel/octane": "^2.12",
         "laravel/reverb": "^1.5",
         "laravel/sanctum": "^4.2",
+        "laravel/socialite": "^5.23",
         "laravel/tinker": "^2.10",
         "league/flysystem-aws-s3-v3": "^3.0",
         "sentry/sentry-laravel": "^4.15",
+        "socialiteproviders/authentik": "^5.2",
         "spatie/laravel-activitylog": "^4.10",
         "spatie/laravel-settings": "^3.4",
         "tightenco/ziggy": "^2.5"
