--- a/.env.build
+++ b/.env.build
@@ -1,6 +1,6 @@
-VITE_APP_NAME="Eurofurence Signage"
-VITE_PROJECT_PATH="EF29"
+VITE_APP_NAME="Furciety Signage"
+VITE_PROJECT_PATH="FurcietySchedule"
 VITE_REVERB_APP_KEY="GJ0k0moYvhIYwKlsArzOGUSeCBxi3IDbMX1Lpv3g"
-VITE_REVERB_HOST="signage.eurofurence.org"
+VITE_REVERB_HOST="schedule.Furciety.org"
 VITE_REVERB_PORT="443"
 VITE_REVERB_SCHEME="https"
